tests/idris2/interpreter008/expected
1/1: Building Issue2041 (Issue2041.idr)
Error: Unsolved holes:
Main.{n:803} introduced at: 
Issue2041:5:17--5:19
 1 | ex : {n : Nat} -> String
 2 | ex {n} = "hello" ++ show n
 3 | 
 4 | main : IO ()
 5 | main = putStrLn ex
                     ^^

Main> Encountered unimplemented hole Main.{n:803}
Warning: compiling hole Main.{n:803}
Main> Encountered unimplemented hole Main.{n:4}
Warning: compiling hole Main.{n:4}
Main> 
Bye for now!
